# -Homework_for_the_workshop-lecture-_2

./: CMakeLists.txt  README.md  main.cpp
Solving_Metod/: Solving_Metod.cpp  Solving_Metod.h
Task/: Task.cpp  Task.h
Test/: Test.cpp  Test.h
Vector/: Vector.cpp  Vector.h
results/: Генетический алгоритм 50 покалений 500 популяция 10% имегрантов.txt
